--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -21,4 +21,6 @@
     {{- end }}
 
     <link rel="stylesheet" href="{{ "/css/custom.css" | relURL }}">
+
+    <script data-ad-client="ca-pub-2876317644479184" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
