--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -111,6 +111,9 @@
           <div class="col-10">
             <article class="article">
               <h1>Overview</h1>
+
+              <p> {{ .Params.intro | markdownify }}</p>
+
               <table class="table table-bordered">
                 <thead>
                     <tr>
