--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -25,6 +25,10 @@
                                     <span class="h6 mb-0">StaticGen</span>
                                     <p class="text-small text-muted">A leaderboard of static site generators</p>
                                 </a>
+                                <a class="dropdown-item" href="https://jamstackthemes.dev/">
+                                    <span class="h6 mb-0">JAMstack Themes</span>
+                                    <p class="text-small text-muted">A list of themes and starters for JAMstack sites</p>
+                                </a>
                             </div>
                         </li>
                         <li class="nav-item">
