--- a/layouts/shortcodes/chart-tabs.html
+++ b/layouts/shortcodes/chart-tabs.html
@@ -1,15 +1,20 @@
+{{ $md := $.Page.Params.md }}
+{{ $adoc := $.Page.Params.adoc }}
+{{ $rst := $.Page.Params.rst }}
+
 <ul class="nav nav-tabs" id="myTab" role="tablist">
   <li class="nav-item">
     <a class="nav-link active" id="home-tab" data-toggle="tab" href="#format" role="tab" aria-controls="format" aria-selected="true">By Format</a>
   </li>
-  <li class="nav-item">
-    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#ssg" role="tab" aria-controls="ssg" aria-selected="false">By Generator</a>
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" data-flip="false">By Generator</a>
+    <div class="dropdown-menu">
+      <a class="dropdown-item {{ if eq $md false }}d-none{{ end }}" id="md-tab" data-toggle="tab" href="#md" role="tab" aria-controls="md" aria-selected="true">Markdown</a>
+      <a class="dropdown-item {{ if eq $adoc false }}d-none{{ end }}" id="adoc-tab" data-toggle="tab" href="#adoc" role="tab" aria-controls="adoc" aria-selected="true">AsciiDoc</a>
+      <a class="dropdown-item {{ if eq $rst false }}d-none{{ end }}" id="adoc-tab" data-toggle="tab" href="#rst" role="tab" aria-controls="rst" aria-selected="true">reStructuredText</a>
+    </div>
   </li>
 </ul>
-
-{{ $md := .Get "md" }}
-{{ $adoc := .Get "adoc" }}
-{{ $rst := .Get "rst" }}
 
 <div class="tab-content" id="myTabContent">
 
@@ -17,8 +22,16 @@
     <div id="benchmark-formats" class="plot"></div>
   </div>
 
-  <div class="tab-pane fade" id="ssg" role="tabpanel" aria-labelledby="ssg-tab">
-    <div id="benchmark-ssgs" class="plot"></div>
+  <div class="tab-pane fade" id="md" role="tabpanel" aria-labelledby="md-tab">
+    <div id="Markdown" class="plot"></div>
+  </div>
+
+  <div class="tab-pane fade" id="adoc" role="tabpanel" aria-labelledby="adoc-tab">
+    <div id="AsciiDoc" class="plot"></div>
+  </div>
+
+  <div class="tab-pane fade" id="rst" role="tabpanel" aria-labelledby="rst-tab">
+    <div id="reStructuredText" class="plot"></div>
   </div>
 
 </div>
