--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -13,7 +13,7 @@
         <div class="row justify-content-between">
             <div class="col">
                 <div class="media align-items-center">
-                    <img alt="Image" src="{{ $logo.RelPermalink }}" class="avatar avatar-lg avatar-square rounded" />
+                    <img alt="Logo for {{ $id }}" src="{{ $logo.RelPermalink }}" class="avatar avatar-lg avatar-square rounded" />
                     <div class="media-body">
                         <h1 class="mb-0">{{ .Params.title }}</h1>
                         <h2 class="lead mb-2">{{ .Params.description }}</h2>
