--- a/layouts/_default/leaderboard.html
+++ b/layouts/_default/leaderboard.html
@@ -71,7 +71,7 @@
                             <tr class="bg-white">
                                 <th scope="row">
                                     <a class="media align-items-center" href="/ssg/{{ $id }}">
-                                        <img alt="Image" src="{{ $logo.RelPermalink }}" class="avatar rounded avatar-sm" />
+                                        <img alt="Logo for {{ $id }}" src="{{ $logo.RelPermalink }}" class="avatar rounded avatar-sm" />
                                         <div class="media-body">
                                             <span class="h6 mb-0">{{ .Title }}</span>
                                             <span class="text-muted">{{ index $ssg.version }}</span>
@@ -82,10 +82,10 @@
                                 <td class="time">{{ lang.NumFmt 3 (index $ssg.data.Markdown 2) }}</td>
                                 <td>
                                     <div class="dropdown">
-                                        <button class="btn btn-sm btn-outline-primary dropdown-toggle dropdown-toggle-no-arrow" type="button" id="dropdownMenuButton-1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <button class="btn btn-sm btn-outline-primary dropdown-toggle dropdown-toggle-no-arrow" type="button" id="external-links" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" aria-label="External links" title="External links">
                                             <i class="icon-dots-three-horizontal"></i>
                                         </button>
-                                        <div class="dropdown-menu dropdown-menu-sm" aria-labelledby="dropdownMenuButton">
+                                        <div class="dropdown-menu dropdown-menu-sm" aria-labelledby="external-links">
                                             <a class="dropdown-item" href="{{ .Params.homepage }}"><i class="icon-home"></i> Website</a>
                                             <a class="dropdown-item" href="https://github.com/{{ .Params.repo }}"><i class="socicon-github"></i> Repository</a>
                                         </div>
@@ -108,7 +108,7 @@
                             <tr class="bg-white">
                                 <th scope="row">
                                     <a class="media align-items-center" href="/ssg/{{ $id }}">
-                                        <img alt="Image" src="{{ $logo.RelPermalink }}" class="avatar rounded avatar-sm" />
+                                        <img alt="Logo for {{ $id }}" src="{{ $logo.RelPermalink }}" class="avatar rounded avatar-sm" />
                                         <div class="media-body">
                                             <span class="h6 mb-0">{{ .Title }}</span>
                                             <span class="text-muted">{{ index $ssg.version }}</span>
@@ -119,10 +119,10 @@
                                 <td class="time">{{ lang.NumFmt 3 (index $ssg.data.AsciiDoc 2) }}</td>
                                 <td>
                                     <div class="dropdown">
-                                        <button class="btn btn-sm btn-outline-primary dropdown-toggle dropdown-toggle-no-arrow" type="button" id="dropdownMenuButton-1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <button class="btn btn-sm btn-outline-primary dropdown-toggle dropdown-toggle-no-arrow" type="button" id="external-links-2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" aria-label="External links" title="External links">
                                             <i class="icon-dots-three-horizontal"></i>
                                         </button>
-                                        <div class="dropdown-menu dropdown-menu-sm" aria-labelledby="dropdownMenuButton">
+                                        <div class="dropdown-menu dropdown-menu-sm" aria-labelledby="external-links-2">
                                             <a class="dropdown-item" href="{{ .Params.homepage }}"><i class="icon-home"></i> Website</a>
                                             <a class="dropdown-item" href="https://github.com/{{ .Params.repo }}"><i class="socicon-github"></i> Repository</a>
                                         </div>
@@ -145,7 +145,7 @@
                             <tr class="bg-white">
                                 <th scope="row">
                                     <a class="media align-items-center" href="/ssg/{{ $id }}">
-                                        <img alt="Image" src="{{ $logo.RelPermalink }}" class="avatar rounded avatar-sm" />
+                                        <img alt="Logo for {{ $id }}" src="{{ $logo.RelPermalink }}" class="avatar rounded avatar-sm" />
                                         <div class="media-body">
                                             <span class="h6 mb-0">{{ .Title }}</span>
                                             <span class="text-muted">{{ index $ssg.version }}</span>
@@ -156,10 +156,10 @@
                                 <td class="time">{{ lang.NumFmt 3 (index $ssg.data.reStructuredText 2) }}</td>
                                 <td>
                                     <div class="dropdown">
-                                        <button class="btn btn-sm btn-outline-primary dropdown-toggle dropdown-toggle-no-arrow" type="button" id="dropdownMenuButton-1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <button class="btn btn-sm btn-outline-primary dropdown-toggle dropdown-toggle-no-arrow" type="button" id="external-links-3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" aria-label="External links" title="External links">
                                             <i class="icon-dots-three-horizontal"></i>
                                         </button>
-                                        <div class="dropdown-menu dropdown-menu-sm" aria-labelledby="dropdownMenuButton">
+                                        <div class="dropdown-menu dropdown-menu-sm" aria-labelledby="dexternal-links-3">
                                             <a class="dropdown-item" href="{{ .Params.homepage }}"><i class="icon-home"></i> Website</a>
                                             <a class="dropdown-item" href="https://github.com/{{ .Params.repo }}"><i class="socicon-github"></i> Repository</a>
                                         </div>
