Add Feature Matrix

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -8,6 +8,10 @@ body {
     /* Margin bottom by footer height */
 }
 
+caption {
+    caption-side: top;
+}
+
 .footer {
     position: absolute;
     bottom: 0;
