--- a/layouts/_default/matrix.html
+++ b/layouts/_default/matrix.html
@@ -96,7 +96,7 @@
                         {{ end }}
                     </tr>
                     <tr>
-                        <td>Multiple outputs <i
+                        <td>Multiple Outputs <i
                             data-toggle="tooltip"
                             data-placement="right"
                             title="The ability to output content in formats other than HTML."
