--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -26,7 +26,7 @@
     <link rel="preload" as="style" onload="this.rel='stylesheet'" href="{{ "/css/socicon.min.css" | relURL }}">
     <link rel="preload" as="style" onload="this.rel='stylesheet'" href="{{ "/css/entypo.min.css" | relURL }}">
 
-    <script data-ad-client="ca-pub-2876317644479184" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- <script data-ad-client="ca-pub-2876317644479184" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
   </head>
   <body class="bg-white">
     {{ partial "header" . }}
