--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -15,7 +15,7 @@
                             <a href="/" class="nav-link">Home</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown">Explore</a>
+                            <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown">Compare</a>
                             <div class="dropdown-menu" aria-labelledby="pagesDropdown">
                                 <a class="dropdown-item" href="/leaderboard">
                                     <span class="h6 mb-0">Leaderboard</span>
