--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,7 +1,3 @@
-{{ define "styles" }}
-  <link rel="stylesheet" href="{{ "/css/vendor/highslide.min.css" | relURL }}">
-{{ end }}
-
 {{ define "main" }}
 
 {{ $logo := .Resources.GetMatch "logo.png" }}
@@ -168,8 +164,7 @@
 {{ $id := lower .Params.title }}
 {{ $ssg := index .Site.Data.report $id }}
 
-<script type="text/javascript" src="https://code.highcharts.com/highcharts.src.js"></script>
-<script type="text/javascript" src="https://code.highcharts.com/modules/data.js"></script>
+<script type="text/javascript" src="/js/vendor/highcharts/highcharts.min.js"></script>
 
 <script type="text/javascript">
   var seriesData1 = [];
