--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -30,12 +30,8 @@
                         <li class="nav-item">
                             <a href="/knowledge" class="nav-link">Knowledge Base</a>
                         </li>
-                        <!--
                         <li class="nav-item">
-                            <a href="/knowledge" class="nav-link">Blog</a>
-                        </li>-->
-                        <li class="nav-item">
-                            <a href="https://github.com/errata-ai/static-school" class="nav-link"><i class="socicon-github"></i> GitHub</a>
+                            <a href="/blog" class="nav-link">Blog</a>
                         </li>
                     </ul>
 
