--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -1,5 +1,20 @@
 {{ define "main" }}
 
+<!--
+<nav aria-label="breadcrumb" role="navigation" class="bg-primary text-white">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="/blog">Blog</a></li>
+                    <li class="breadcrumb-item"><a href="pages-inner.html">{{ .Params.category }}</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">{{ .Title }}</li>
+                </ol>
+            </div>
+        </div>
+    </div>
+</nav>-->
+
 <section class="pb-4">
     <div class="container">
         <div class="row justify-content-center">
