--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -6,7 +6,7 @@
             <div class="col-12 col-md-10 col-lg-9">
                 <h1 class="display-4">Static School 🎓</h1>
                 <span class="lead">
-                    News, guides, and case studies from the world of static site generators.
+                    News, guides, and case studies from the JAMstack world.
                 </span>
             </div>
             <!--end of col-->
