Add caption to feature matrix

--- a/layouts/partials/feature-matrix.html
+++ b/layouts/partials/feature-matrix.html
@@ -1,5 +1,6 @@
 {{ with .Site.GetPage "section" "ssg" }}
 <table id="matrix" class="table text-center table-bordered" style="width:100%">
+    <caption>Click on a "✔️" to learn more about a feature.</caption>
     <thead>
         <tr>
         <th class="noVis"></th>
