--- a/layouts/partials/banner.html
+++ b/layouts/partials/banner.html
@@ -4,7 +4,7 @@
             <div class="col">
                 💫
                 <span class="mr-2">
-                 Static School is 100% open source&mdash;check out the <a href="https://github.com/errata-ai/static-school" class="text-white">GitHub repository</a> to learn more!
+                 Static School is 100% open source&mdash;check out the <a href="https://github.com/errata-ai/static-school" class="text-white font-weight-bold"><u>GitHub repository</u></a> to learn more!
                 </span>
             </div>
             <!--end of col-->
