--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,3 +1,5 @@
+/* Footer */
+
 html {
     position: relative;
     min-height: 100%;
@@ -7,6 +9,17 @@ body {
     margin-bottom: 60px;
     /* Margin bottom by footer height */
 }
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    /* Set the fixed height of the footer here */
+    line-height: 60px;
+}
+
+/* --- */
 
 caption {
     caption-side: top;
@@ -31,15 +44,6 @@ pre {
     padding: .5em;
     color: #333333;
     overflow-x: auto;
-}
-
-.footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    /* Set the fixed height of the footer here */
-    line-height: 60px;
 }
 
 .logo {
