--- a/layouts/_default/tools.html
+++ b/layouts/_default/tools.html
@@ -101,20 +101,18 @@
                 </div>
             </div>
             <!--
-            <div class="col-lg-3">
-                <div>
-                    <div class="card card-borderless bg-secondary">
-                        <a class="card-body" href="#">
-                            <div class="d-flex justify-content-between mb-3">
-                                <img alt="Image" src="/img/logo-w-gradient.svg" />
-                                <span class="title-decorative">Sponsor</span>
-                            </div>
-                            <span class="h6">A robust suite of styled elements and pages</span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            -->
+            <div class="col-3 d-none d-md-block">
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <ins class="adsbygoogle"
+                    style="display:block"
+                    data-ad-client="ca-pub-2876317644479184"
+                    data-ad-slot="9211949262"
+                    data-ad-format="auto"
+                    data-full-width-responsive="true"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+            </div>-->
         </div>
         <!--end of row-->
     </div>
