--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,10 +8,11 @@
 
     {{ if .IsHome }}
       <title>Static School | Compare Static Site Generators</title>
-      <meta name="description" content="{{ .Site.Params.description }}">
     {{ else }}
       <title>{{ if ne .Title .Site.Title }}{{ .Title }} | {{ end }} {{ .Site.Title }}</title>
     {{ end }}
+
+    <meta name="description" content="Discover, explore, and compare static site generators (SSGs) and related JAMstack software.">
 
     {{ if .Params.needsFA }}
       <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
