--- a/layouts/_default/table.html
+++ b/layouts/_default/table.html
@@ -28,6 +28,17 @@
             </div>
             <!--end of col-->
         </div>
+        <!--
+        <div class="row">
+            <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-client="ca-pub-2876317644479184"
+                data-ad-slot="4005678447"
+                data-ad-format="horizontal"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>-->
         <!--end of row-->
     </div>
     <!--end of container-->
