--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -40,6 +40,18 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-10">
+                <div class="pb-3">
+                    <ins class="adsbygoogle"
+                        style="display:block; text-align:center;"
+                        data-ad-layout="in-article"
+                        data-ad-format="fluid"
+                        data-full-width-responsive="true"
+                        data-ad-client="ca-pub-2876317644479184"
+                        data-ad-slot="7818313839"></ins>
+                    <script>
+                        (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+                </div>
                 <article>
                     {{ .Content }}
                 </article>
