--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="bg-gray text-light footer">
   <div class="container text-center">
-    <p>© 2020 Joseph Kato | <a href="https://github.com/errata-ai">errata.ai</a></p>
+    <p>© 2020 Joseph Kato | <a href="/privacy">Privacy Policy</a></p>
   </div>
 </footer>
