--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -14,6 +14,7 @@
 
     <meta name="description" content="Discover, explore, and compare static site generators (SSGs) and related JAMstack software.">
 
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
     {{ if .Params.needsFA }}
       <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     {{ end }}
@@ -31,6 +32,8 @@
     <!-- TODO: Remove these? -->
     <link rel="preload" as="style" onload="this.rel='stylesheet'" href="{{ "/css/socicon.min.css" | relURL }}">
     <link rel="preload" as="style" onload="this.rel='stylesheet'" href="{{ "/css/entypo.min.css" | relURL }}">
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
   <body class="bg-white">
     {{ partial "header" . }}
@@ -158,6 +161,26 @@
           w.loadCSS = loadCSS;
         }
       }( typeof global !== "undefined" ? global : this ) );
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
+    <script>
+    window.cookieconsent.initialise({
+      "palette": {
+        "popup": {
+          "background": "#edeff5",
+          "text": "#838391"
+        },
+        "button": {
+          "background": "#4b81e8"
+        }
+      },
+      "theme": "classic",
+      "content": {
+        "message": "This website uses cookies for ad personalization and measurement.",
+        "href": "https://staticschool.com/privacy"
+      }
+    });
     </script>
 
     {{- range .Params.js }}
